hphp/hack/test/typecheck/invalid_arraykey/invalid_arraykey.php.legacy.exp
File "invalid_arraykey.php", line 21, characters 3-14:
Invalid index type for this Vector (Typing[4110])
File "invalid_arraykey.php", line 21, characters 6-9:
This is an int because only int can be used to index into a Vector or vec.
File "invalid_arraykey.php", line 21, characters 6-9:
It is incompatible with null
File "invalid_arraykey.php", line 22, characters 3-13:
Invalid index type for this Vector (Typing[4110])
File "invalid_arraykey.php", line 22, characters 6-8:
This is an int because only int can be used to index into a Vector or vec.
File "invalid_arraykey.php", line 22, characters 6-8:
It is incompatible with a float
File "invalid_arraykey.php", line 26, characters 3-14:
Invalid index type for this vec (Typing[4110])
File "invalid_arraykey.php", line 26, characters 6-9:
This is an int because only int can be used to index into a Vector or vec.
File "invalid_arraykey.php", line 26, characters 6-9:
It is incompatible with null
File "invalid_arraykey.php", line 27, characters 3-13:
Invalid index type for this vec (Typing[4110])
File "invalid_arraykey.php", line 27, characters 6-8:
This is an int because only int can be used to index into a Vector or vec.
File "invalid_arraykey.php", line 27, characters 6-8:
It is incompatible with a float
File "invalid_arraykey.php", line 6, characters 3-10:
This value is not a valid key type for this container (Typing[4298])
File "invalid_arraykey.php", line 5, characters 3-11:
This container is an array (used like a hashtable)
File "invalid_arraykey.php", line 6, characters 6-9:
Null cannot be used as a key for an array (used like a hashtable)
File "invalid_arraykey.php", line 7, characters 3-9:
This value is not a valid key type for this container (Typing[4298])
File "invalid_arraykey.php", line 5, characters 3-11:
This container is an array (used like a hashtable)
File "invalid_arraykey.php", line 7, characters 6-8:
A float cannot be used as a key for an array (used like a hashtable)
File "invalid_arraykey.php", line 11, characters 3-10:
This value is not a valid key type for this container (Typing[4298])
File "invalid_arraykey.php", line 9, characters 8-13:
This container is an object of type dict<?string, int>
File "invalid_arraykey.php", line 11, characters 6-9:
Null cannot be used as a key for an object of type dict<?string, int>
File "invalid_arraykey.php", line 12, characters 3-9:
This value is not a valid key type for this container (Typing[4298])
File "invalid_arraykey.php", line 9, characters 8-13:
This container is an object of type dict<?(float | string), int>
File "invalid_arraykey.php", line 12, characters 6-8:
A float cannot be used as a key for an object of type dict<?(float | string), int>
File "invalid_arraykey.php", line 16, characters 3-10:
This value is not a valid key type for this container (Typing[4298])
File "invalid_arraykey.php", line 14, characters 8-12:
This container is an object of type Map<?(float | string), int>
File "invalid_arraykey.php", line 16, characters 6-9:
Null cannot be used as a key for an object of type Map<?(float | string), int>
File "invalid_arraykey.php", line 17, characters 3-9:
This value is not a valid key type for this container (Typing[4298])
File "invalid_arraykey.php", line 14, characters 8-12:
This container is an object of type Map<?(float | string), int>
File "invalid_arraykey.php", line 17, characters 6-8:
A float cannot be used as a key for an object of type Map<?(float | string), int>
